--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,14 @@ crate-type = ["cdylib"]
 ext-php-rs = { version = "0.13.0" }
 lazy_static = "1.5"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [build-dependencies]
 built = { version = "0.7", features = ["chrono"] }
 
 [profile.release]
-strip = "debuginfo"
-lto = true
 codegen-units = 1
+lto = true
 opt-level = 3
+strip = "debuginfo"
