--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+chrono = { version = "0.4.39", features = ["serde"] }
 ext-php-rs = { version = "0.13.0" }
 lazy_static = "1.5"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
