--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,18 @@ crate-type = ["cdylib"]
 
 [dependencies]
 chrono = { version = "0.4.39", features = ["serde"] }
+crossbeam-channel = "0.5.14"
 ext-php-rs = { version = "0.13.0" }
+fnv = "1.0.7"
+futures-util = "0.3.31"
 lazy_static = "1.5"
+parking_lot = "0.12.3"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.43.0", features = ["time", "sync", "rt"] }
+tokio-tungstenite = "0.26.1"
+url = "2.5.4"
 
 [build-dependencies]
 built = { version = "0.7", features = ["chrono"] }
