--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,12 @@ parking_lot = "0.12.3"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.43.0", features = ["time", "sync", "rt"] }
+tokio = { version = "1.43.0", features = [
+    "time",
+    "sync",
+    "rt",
+    "rt-multi-thread",
+] }
 tokio-tungstenite = "0.26.1"
 url = "2.5.4"
 
