--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ crate-type = ["cdylib"]
 [dependencies]
 chrono = { version = "0.4.39", features = ["serde"] }
 crossbeam-channel = "0.5.14"
-ext-php-rs = { version = "0.13.0" }
+ext-php-rs = { version = "0.13.1" }
+flume = "0.11.1"
 fnv = "1.0.7"
 futures-util = "0.3.31"
 lazy_static = "1.5"
