--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 chrono = { version = "0.4", features = ["serde"] }
 ext-php-rs = { version = "0.15" }
 lazy_static = "1.5"
+libc = "0.2"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
